Read weather data from GitHub at runtime via manifest.json
Streamlit Community Cloud's auto-redeploy is unreliable, leaving the container on a
stale data snapshot indefinitely. Instead of relying on redeployment, the app now fetches
data directly from GitHub: fetch_data.py generates manifest.json (listing all runs/
locations/horizons) after each data fetch; daily_plot.yml commits it alongside new data;
app.py reads the manifest and downloads .nc files on demand via raw.githubusercontent.com,
cached with @st.cache_data. No redeployment needed, no rate limits, $0 cost.

--- a/.github/workflows/daily_plot.yml
+++ b/.github/workflows/daily_plot.yml
@@ -94,6 +94,7 @@ jobs:
           if [ -n "$(git status --porcelain)" ]; then
             date -u +'%Y%m%d_%H%M' > data_version.txt
             git add data_version.txt
+            git add manifest.json
             git commit -m "Auto-update Traces: $(date -u +'%Y-%m-%d %H:%M') UTC"
             robust_push
           else
